# ffty-etf

./: README.md  README.md.in  ffty.csv  ffty.md  pyproject.toml
.github/workflows/: main.yml
ffty_etf/: holdings.py
src/ffty_etf/: holdings.py
