[project]
name = "ffty-etf"
version = "0.1.0"
description = ""
authors = [{ name = "Major Hayden", email = "major@mhtx.net" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pandas (>=2.3.0,<3.0.0)", "tabulate (>=0.9.0,<0.10.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
get-holdings = "ffty_etf.holdings:main"
